--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Honk&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Jersey+10&display=swap');
 
-
-h1{
-  font-family: "Honk", system-ui;
-  font-optical-sizing: auto;
-  font-size: 68px;
-}
+h1 {
+    font-family: "Jersey 10", sans-serif;
+    font-weight: 400;
+    font-size: 108px;
+    color: aquamarine;
+  }
+  
